--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
